# erudify-web

./: Cargo.toml  deny.toml  flake.nix  wrangler.toml
.github/workflows/: deploy.yml  test.yml
dioxus/: package-lock.json
dioxus/public/: style.css  tailwind.css
dioxus/src/: main.rs
e2e/: Cargo.toml
e2e/src/: main.rs
src/: app.rs  hydrate.rs  lib.rs  server.rs  ssr.rs
src/components/: auth.rs  exercise.rs  mod.rs  nav.rs  pages.rs
