[package]
name = "erudify-web"
version = "0.1.0"
edition = "2021"
authors = [ "lemmih <lemmih@gmail.com>" ]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.3.0", features=['http', 'axum'], optional = true }
worker-macros = { version="0.3.1", features=['http'], optional = true }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.1" }
leptos = "0.6.13"
axum = { version = "0.7", default-features = false, optional = true }
tower = { version = "0.4.13", optional = true }
http = { version = "1.1.0", optional = true }
leptos_axum = { version = "0.6.12", default-features = false, optional = true }
leptos_meta = "0.6.12"
leptos_router = "0.6.12"
wasm-bindgen = "0.2"
console_log = "1.0.0"
log = "0.4.22"
include_dir = { version = "0.7.4", optional = true }
mime = { version = "0.3.17", optional = true}
mime_guess = { version = "2.0.5", optional = true}


[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:tower",
  "dep:http",
  "dep:axum",
  "leptos/ssr",
  "leptos_axum/wasm",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:include_dir",
  "dep:mime",
  "dep:mime_guess",
  "dep:worker",
  "dep:worker-macros",
]

[profile.release]
lto = true
opt-level = 's'
