[package]
name = "erudify-web"
version = "0.1.0"
edition = "2021"
authors = ["lemmih <lemmih@gmail.com>"]
license = "Unlicense"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ['http', 'axum'], optional = true }
worker-macros = { version = "0.5.0", features = ['http'], optional = true }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
leptos = "0.7.8"
axum = { version = "0.7", default-features = false, optional = true }
tower = { version = "0.5.0", optional = true }
http = { version = "1.1.0", optional = true }
leptos_axum = { version = "0.7.8", default-features = false, optional = true }
leptos_meta = "0.7.8"
leptos_router = "0.7.8"
wasm-bindgen = "0.2"
console_log = "1.0.0"
log = "0.4"
serde = "1.0"
oauth2 = { version = "4.4", features = [] }
url = "2.5.4"
reqwest = "0.12.15"
send_wrapper = "0.6.0"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:http",
  "dep:axum",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_axum/wasm",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:worker",
  "dep:worker-macros",
  # "getrandom/js",
  # "leptos-use/ssr",
]


[profile.release]
lto = true
opt-level = 's'
